# ad-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  hello.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.js
apps/channels/: admin.py  apps.py  models.py  urls.py  views.py
apps/channels/migrations/: 0001_initial.py  0002_alter_channel_location.py
apps/channels/templates/channels/: detail.html  list.html
apps/chat/: models.py  urls.py  utils.py  views.py
apps/chat/migrations/: 0001_initial.py
apps/chat/templates/chat/: chat.html
apps/clients/: apps.py  models.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py
apps/core/: context_processors.py  mixins.py  urls.py  utils.py  views.py
apps/events/: admin.py  models.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_event_client.py
apps/notifications/: admin.py  apps.py  context_processors.py  models.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/projects/: apps.py  models.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_project_created_by.py
apps/users/: admin.py  models.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_phone_number_alter_user_email.py
apps/users/templates/: login.html
config/: settings.py  urls.py
locale/ru/LC_MESSAGES/: django.mo  django.po
static_src/: main.js
static_src/css/: style.css
templates/: base.html  test.html
templates/partials/: counter.html
(+32 files in other folders)
