[project]
name = "ad-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "django-template-partials>=24.4",
    "django-vite>=3.0.5",
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "markdown>=3.7",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "twilio>=9.4.3",
]
