[project]
name = "ad-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-template-partials>=24.4",
    "django-vite>=3.0.5",
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "markdown>=3.7",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "twilio>=9.4.5",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
    "openai>=1.63.0",
]

[tool.setuptools]
packages = ["apps", "config"]  # Adjust this list to include only your actual Python packages
package-dir = {"" = "."}

# Exclude non-Python directories
[tool.setuptools.exclude-package-data]
"*" = [
    "staticfiles*",
    "static*",
    "media*",
    "node_modules*",
    "locale*",
]
